<resources>
    <string name="app_name">Aadhar-Client</string>
    <string name="otp">OTP</string>
    <string name="send">Send</string>
    <string name="mobile_number">Aadhar Number</string>
    <string name="authenticate">Authenticate</string>
    <string name="prerequisites">Prerequisites</string>
    <string name="authentication">Authentication</string>
    <string name="ekyc_authentication">EKYC Authentication</string>
    <string name="check_in">Check IN</string>
    <string name="download_ekyc">Download EKYC</string>
    <string name="select_ekyc">Select EKYC</string>
    <string name="save">Save</string>
    <string name="gender">Gender:</string>
    <string name="dob">DOB:</string>
    <string name="phone">Phone:</string>
    <string name="display_qr">Display QR</string>
    <string name="qr_code">QR Code</string>
    <string name="please_verify_and_generate_the_qr_code">Please verify and generate the qr code</string>
</resources>