<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EkycActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtEkycHead"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ekyc_authentication"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_margin="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animKyc"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@id/btnDownload"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtEkycHead"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/kyc" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDownload"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cornerRadius="15dp"
        android:text="@string/download_ekyc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/animKyc" />


    <View
        android:id="@+id/viewLine"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_margin="15dp"
        android:background="@color/purple_500"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnDownload"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layOtp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:hint="@string/otp"
        android:visibility="invisible"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewLine">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtOtp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authenticate"
        android:visibility="invisible"
        app:cornerRadius="8dp"
        android:layout_margin="15dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layOtp"/>

</androidx.constraintlayout.widget.ConstraintLayout>